--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,45 +11,6 @@
     tools:context="pro1024.seko.autohotspot.MainActivity">
 
     <TextView
-        android:text="@string/charger"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textView_1"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textAlignment="center"
-        android:textColor="@color/colorText"/>
-
-    <TextView
-        android:text="@string/wifi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView_2"
-        android:layout_below="@+id/textView_1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textAlignment="center"
-        android:textColor="@color/colorText"/>
-
-    <TextView
-        android:text="@string/tethering"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView_3"
-        android:layout_below="@+id/textView_2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textAlignment="center"
-        android:textColor="@color/colorText"/>
-
-    <TextView
         android:text="@string/version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -60,7 +21,108 @@
         android:textSize="8sp"
         android:textColor="@color/colorText"/>
 
-    <!--<CheckBox
+    <TextView
+        android:text="@string/tethering"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView_3"
+        android:textAlignment="center"
+        android:textColor="@color/colorText"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="12sp" />
+
+    <TextView
+        android:text="@string/wifi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView_2"
+        android:textAlignment="center"
+        android:textColor="@color/colorText"
+        android:layout_above="@+id/textView_3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="12sp" />
+
+    <TextView
+        android:text="@string/charger"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView_1"
+        android:textAlignment="center"
+        android:textColor="@color/colorText"
+        android:layout_above="@+id/textView_2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="12sp" />
+
+    <TextView
+        android:text="@string/usage_network_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/usage_network_data"
+        android:textAlignment="textStart"
+        android:textColor="@color/colorText"
+        android:textSize="14sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="@string/traffic_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/traffic_info"
+        android:textAlignment="textStart"
+        android:textColor="@color/colorText"
+        android:textSize="10sp"
+        android:layout_below="@+id/usage_network_data"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <!--<TextView
+        android:text="TEST"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/test"
+        android:layout_below="@+id/textView_3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textAlignment="center"
+        android:textColor="@color/colorText"/>
+
+    <TextView
+        android:text="Tak/Nie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/yn"
+        android:layout_below="@+id/test"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textAlignment="center"
+        android:textColor="@color/colorText"/>
+
+    <TextView
+        android:text="@string/traffic_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/traffic_info"
+        android:textSize="8sp"
+        android:textColor="@color/colorText"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <CheckBox
         android:text="@string/wifi_on_off"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
